Update Workshop 02 Probability.ipynb

--- a/Workshop 02 Probability.ipynb
+++ b/Workshop 02 Probability.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "$$f = \\dfrac{N}{N + M}$$\n",
     "\n",
-    "Then the value of $f * A$ with $A$ being the area of the square will approximate the actual area of the circle (which is  $\\pi 2 r$)\n",
+    "Then the value of $f * A$ with $A$ being the area of the square will approximate the actual area of the circle (which is  $\\pi r^2$)\n",
     "\n",
     "<img src=\"Circle Target.png\" style=\"width: 200px;\">\n",
     "\n",
