Math Workshop Intro and Probability

--- a/Workshop 02 Probability.ipynb
+++ b/Workshop 02 Probability.ipynb
@@ -39,6 +39,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "roll_to_50 = []\n",
+    "\n",
+    "for i in range(0, 50):\n",
+    "    x = np.random.randint(1, 13)\n",
+    "    roll_to_50.append(x)\n",
+    "    if sum(roll_to_50) >= 50:\n",
+    "        return i\n",
+    "\n",
+    "roll_to_50"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -57,6 +77,26 @@
     "n: 100000 Trial average 3.50201 \n",
     "n: 500000 Trial average 3.495568\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "die_rolls = []\n",
+    "\n",
+    "def monte_carlo_dice(n):\n",
+    "    for i in range(n):\n",
+    "        die_values = np.random.randint(1, 7)\n",
+    "        die_rolls.append(die_values)\n",
+    "        avg = sum(die_rolls) / n\n",
+    "    return avg\n",
+    "monte_carlo_dice(1000)"
    ]
   },
   {
@@ -90,6 +130,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "def circle_estimate(r, n):\n",
+    "    print(\"The radius of the circle = \" + str(r))\n",
+    "    area = np.pi * r ** 2\n",
+    "    print(\"The area of the circle = \" + str(area))\n",
+    "    counter = 0\n",
+    "    for i in range(n):\n",
+    "        x = np.random.uniform(-r, r)\n",
+    "        y = np.random.uniform(-r, r)\n",
+    "        z = x ** 2 + y **2\n",
+    "        if z < r ** 2:\n",
+    "            counter += 1\n",
+    "    f = counter / n\n",
+    "    a = f * 4 * r ** 2\n",
+    "    print(\"The estimated area of the circle = \" + str(a))\n",
+    "circle_estimate(2, 10000)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,6 +167,26 @@
     "`binomial_rv` such that `binomial_rv(n, p)` generates one draw of $ Y $.\n",
     "\n",
     "Hint: If $ U $ is uniform on $ (0, 1) $ and $ p \\in (0,1) $, then the expression `U < p` evaluates to `True` with probability $ p $."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "def binomial(n, p):\n",
+    "    counter = 0\n",
+    "    for i in range(n):\n",
+    "        u = np.random.uniform(0, 1)\n",
+    "        print(\"The RNG generated \" + str(u))\n",
+    "        if u < p:\n",
+    "            counter += 1\n",
+    "    return counter\n",
+    "binomial(20, 0.5)"
    ]
   }
  ]
